# Red-team-llm

./: .gitignore  README.md  pyproject.toml
catalog/: inspired-techniques.json  techniques.json
docs/: framework-design.md  framework-roadmap.md  guia-pruebas-ofensivas-llm.md
schemas/: result.schema.json  suite.schema.json  technique.schema.json
src/redteam_llm/: __init__.py  catalog.py  cli.py  detectors.py  models.py  mutators.py  paths.py  runner.py  targets.py
suites/: family-agentic-flow.json  family-core.json  family-data-leakage.json  family-memory.json  family-multimodal-voice.json  family-obfuscation.json  family-rag.json  family-structured-output.json  family-tools.json  quick-smoke.json
tests/: test_catalog.py
tools/: extract_catalog.ps1
